<resources>
    <string name="app_name">MiRm Go</string>
    <string name="main_button_create">サーバーをつくる</string>
    <string name="main_button_add">ログインする</string>
    <string name="main_button_mirm">MiRm Goとは?</string>
    <string name="main_text_description">MiRm GoはMinecraft公式製品ではありません。Mojangから承認されておらず、Mojangとは関係ありません。</string>
    <string name="main_logging_in">ログイン中&#8230;</string>
    <string name="main_login_failed">ログインに失敗しました。</string>
    <string name="main_login_deleted">期限切れでサーバーが削除されました。</string>
    <string name="main_login_user_deleted">ユーザーによってサーバーが削除されました。</string>

    <string name="create_1_title">1.ゲームモード</string>
    <string name="create_survival">サバイバルモード</string>
    <string name="create_survival_text">・ブロックを1から集める\n・死ぬことがある\n・ゾンビなどの敵と戦う</string>
    <string name="create_creative">クリエイティブモード</string>
    <string name="create_creative_text">・初めから全てのブロックを使える\n・死ぬことがない\n・空を自由に飛ぶことができる</string>
    <string name="create_button">これで遊ぶ！</string>
    <string name="create_button_selected">選択済み</string>

    <string name="create_difficulty_title">2.ワールドの難易度</string>
    <string name="create_difficulty_peaceful">ピースフル</string>
    <string name="create_difficulty_peaceful_text">・敵Mob（ゾンビ、クリーパー等）は自然に現れることがない\n・体力は自然に回復</string>
    <string name="create_difficulty_easy">イージー</string>
    <string name="create_difficulty_easy_text">・敵Mobが現れるが、受けるダメージは少ない\n・空腹ゲージが減ることがある</string>
    <string name="create_difficulty_normal">ノーマル</string>
    <string name="create_difficulty_normal_text">・敵Mobが現れ、攻撃をしてくる\n・空腹ゲージが減る</string>
    <string name="create_difficulty_hard">ハード</string>
    <string name="create_difficulty_hard_text">・敵Mobが現れ、さらに強い攻撃をしてくる\n・空腹で死ぬことがある</string>

    <string name="create_terms_title">3.利用規約</string>
    <string name="create_terms_text">必ず最後までお読みになり、同意する場合には最下部のチェックボックスにチェックを入れてください。</string>
    <string name="create_terms_accept">同意する</string>
    <string name="create_terms_not_accept">同意しない</string>

    <string name="create_confirm_title">4.確認</string>
    <string name="create_confirm_gamemode">ゲームモード</string>
    <string name="create_confirm_difficulty">ワールド難易度</string>
    <string name="create_confirm_type">サーバータイプ</string>
    <string name="create_confirm_terms">利用規約</string>
    <string name="create_confirm_button_create">サーバーをつくる！</string>

    <string name="login_title">MiRmにログイン</string>
    <string name="login_server_id">サーバーID</string>
    <string name="login_password">パスワード</string>
    <string name="login_to_created">作成済みのサーバー</string>
    <string name="login_save">ログイン情報を保存する</string>
    <string name="login_e_failed">サーバーIDまたはパスワードが違います。</string>
    <string name="login_e_error">エラーが発生しました。</string>
    <string name="login_e_not_supported">PMMP / CuberiteサーバーはWeb版からのみ操作可能です。</string>

    <string name="panel_serverId">IPアドレス</string>
    <string name="panel_port">ポート</string>
    <string name="panel_join">サーバーに入る</string>
    <string name="panel_time">残り使用可能時間</string>
    <string name="panel_button_extend">延長する</string>
    <string name="panel_server_title">サーバーの状態</string>
    <string name="panel_button_status_page">稼働状況ページを開く</string>
    <string name="panel_button_force_stop">強制停止</string>
    <string name="panel_manage">サーバーの管理</string>
    <string name="panel_logout">ログアウト中&#8230;</string>
    <string name="panel_logout_error">ログアウトに失敗しました。</string>
    <string name="panel_rss_title">運営からのお知らせ</string>
    <string name="panel_min_unit">分</string>
    <string name="panel_need_reload">再読み込みしてください</string>

    <string name="panel_main_title">トップ</string>
    <string name="panel_list_text">MiRmにはほかにも面白いサーバーがいっぱい！いますぐチェックしてみよう。</string>
    <string name="panel_list_button">サーバーリストをチェックする</string>

    <string name="panel_button">設定</string>
    <string name="panel_setting_title">サーバー設定</string>
    <string name="panel_op_title">OP設定</string>
    <string name="panel_name_hint">プレイヤー名</string>
    <string name="panel_time_title">時間設定</string>
    <string name="panel_gamemode_title">ゲームモード設定</string>
    <string name="panel_wl_title">ホワイトリスト有効化設定</string>
    <string name="panel_wl_checkbox">ホワイトリストを有効化/無効化</string>
    <string name="panel_setting_start">実行中 </string>
    <string name="panel_setting_success">完了</string>
    <string name="panel_setting_error">エラー</string>
    <string name="panel_setting_error_server">サーバーを起動してください。</string>
    <string name="panel_install_minecraft">Minecraft:Bedrock Editionをインストールしてください。</string>

    <string name="panel_info_ways">アプリについて</string>
    <string name="panel_about_build_title">ビルドバージョン</string>
    <string name="panel_about_developer">開発</string>
    <string name="panel_about_button_terms">利用規約</string>
    <string name="panel_about_button_oss">オープンソースライセンス</string>
    <string name="panel_about_button_hp">公式サイト</string>
    <string name="panel_about_delete">サーバーを削除</string>
    <string name="panel_about_delete_text">サーバーを削除すると、MiRm上から完全にデータが削除され二度と復旧することはできません。</string>

    <string name="loading">読み込み中&#8230;</string>
    <string name="back">戻る</string>
    <string name="bds">Bedrock Dedicated Server</string>
    <string name="out_of_service">システムメンテナンス中のため通信できません。</string>
    <string name="network_error">ネットワークエラーが発生しました。</string>
    <string name="error">エラーが発生しました。</string>

    <string name="status_running">起動中</string>
    <string name="status_stopped">停止中</string>
    <string name="status_running_processing">起動処理中&#8230;</string>
    <string name="status_stopped_processing">停止処理中&#8230;</string>

    <string name="popup_official_site">Web版で開く</string>
    <string name="popup_logout">ログアウト</string>
    <string name="popup_info">サーバー情報</string>

    <string name="dialog_extend_title">使用可能時間延長</string>
    <string name="dialog_extend_text">数十秒の動画広告を最後まで視聴することで、サーバーの使用可能時間を延長することができます。延長に料金は発生しません。</string>
    <string name="dialog_extend_button_do">動画を見て延長する</string>
    <string name="dialog_extend_success">使用可能時間を延長しました。</string>
    <string name="dialog_extend_failed">広告をロードできませんでした。</string>
    <string name="dialog_extend_error">エラーが発生しました。</string>
    <string name="dialog_extend_error_time">残り使用可能時間が6時間を切ると延長が可能になります。</string>

    <string name="dialog_info_text">これらの情報はWeb版からアクセスするときに必要となります。右上のボタンの[サーバー情報]からこれらの情報は確認できます。\n\nサーバーID: %1$s\nパスワード: %2$s</string>

    <string-array name="op_list">
        <item>OPに設定</item>
        <item>OPを解除</item>
    </string-array>

    <string-array name="time_list">
        <item>朝</item>
        <item>昼</item>
        <item>夕方</item>
        <item>夜</item>
    </string-array>

    <string-array name="gamemode_list">
        <item>サバイバル</item>
        <item>クリエイティブ</item>
    </string-array>


    <!-- Environmental Variables -->

    <!-- Versions -->
    <string name="debug_flag">mirm_go</string>
    <string name="version_code">1.0.1</string>
    <string name="version">1.0.1 Alpha</string>
    <string name="developer">Itsu (MiRm Development Team)</string>

    <!-- App Id: ca-app-pub-1788933592781069~5529258460 -->
    <!-- Extend Movie Id: ca-app-pub-1788933592781069/1015298382 -->
    <!-- Banner 1 Id: ca-app-pub-1788933592781069/5501338307 -->
    <string name="admob_appid_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_appid">ca-app-pub-1788933592781069~5529258460</string>
    <string name="admob_movie_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_movie_extend">ca-app-pub-1788933592781069/1015298382</string>
    <string name="admob_banner_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_1">ca-app-pub-1788933592781069/5501338307</string>
</resources>
