<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepKoamaru"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panel_about_build_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_code"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepKoamaruBlighter"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panel_about_developer"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/aboutTermsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/dr_button_create"
                android:text="@string/panel_about_button_terms"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/aboutOSSButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/dr_button_outline"
                android:text="@string/panel_about_button_oss"
                android:textColor="@color/wizardGrey" />

            <Button
                android:id="@+id/aboutHPButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/dr_button_outline"
                android:text="@string/panel_about_button_hp"
                android:textColor="@color/wizardGrey" />

            <Button
                android:id="@+id/aboutDeleteButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panel_about_delete"
                android:textColor="@color/carminePink" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
</ScrollView>