<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepCove"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="48dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pic_mirm_150" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/loginErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/carminePink"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="@string/login_e_not_supported" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <EditText
        android:id="@+id/loginServerId"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_server_id"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/loginPassword"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <CheckBox
        android:id="@+id/loginSavingCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_save" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/loginTryLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dr_button_create"
        android:text="@string/login_title"
        tools:visibility="visible" />

    <Button
        android:id="@+id/loginBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dr_button_outline"
        android:text="@string/back"
        android:textColor="@color/wizardGrey" />

</LinearLayout>