<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/deepKoamaru"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_power_settings_new_black_18dp"
                android:text="@string/panel_server_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <Switch
                android:id="@+id/panelStatusSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingTop="8dp"
                android:text="@string/status_running" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/panelOpenStatusPageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/panel_button_status_page"
                    android:textAlignment="textEnd"
                    android:textColor="@color/pureApple" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_serverId"
                    android:textColor="@color/wizardGrey" />

                <TextView
                    android:id="@+id/panelIPAddressView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="x.mirm.jp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/deepKoamaru"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/soaringEagle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_port"
                    android:textColor="@color/wizardGrey" />

                <TextView
                    android:id="@+id/panelPortView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="19132"
                    android:textAlignment="textEnd"
                    android:textColor="@color/deepKoamaru"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/panelJoinButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dr_button_create"
            android:text="@string/panel_join"
            android:textColor="@android:color/white" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/soaringEagle" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/panel_list_text"
            android:textColor="@color/wizardGrey" />

        <Button
            android:id="@+id/panelGotoListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dr_button_outline"
            android:text="Button"
            android:textColor="@color/wizardGrey"
            tools:text="@string/panel_list_button" />
    </LinearLayout>
</ScrollView>