<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepCove"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pic_mirm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/createServerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dr_button_create"
            android:text="@string/main_button_create"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/loginButton"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoText="false"
            android:background="@drawable/dr_button_outline"
            android:text="@string/main_button_add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/wizardGrey" />

        <Button
            android:id="@+id/aboutMiRmButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/main_button_mirm"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/wizardGrey" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_text_description"
            android:textColor="@color/wizardGrey" />
    </LinearLayout>
</LinearLayout>