<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepKoamaru"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_people_black_18dp"
                android:text="@string/panel_op_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/opName"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/panel_name_hint"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@color/soaringEagle" />

            <Spinner
                android:id="@+id/opSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/op_list"
                android:popupBackground="@color/deepCove" />

            <Button
                android:id="@+id/opButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/dr_button_create"
                android:text="@string/panel_button"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepKoamaruBlighter"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_access_time_black_18dp"
                android:text="@string/panel_time_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:entries="@array/time_list"
                android:popupBackground="@color/deepCove" />

            <Button
                android:id="@+id/timeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/dr_button_create"
                android:text="@string/panel_button"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/exodusFruit"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_videogame_asset_black_18dp"
                android:text="@string/panel_gamemode_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/gameModeName"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/panel_name_hint"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@color/soaringEagle" />

            <Spinner
                android:id="@+id/gameModeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/gamemode_list"
                android:popupBackground="@color/deepCove" />

            <Button
                android:id="@+id/gameModeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/dr_button_create"
                android:text="@string/panel_button"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/deepCove"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_playlist_add_check_black_18dp"
                android:text="@string/panel_wl_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/whiteListCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/panel_wl_checkbox" />

            <Button
                android:id="@+id/whiteListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/dr_button_create"
                android:lineSpacingExtra="8sp"
                android:text="@string/panel_button"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>
</ScrollView>